--- a/app/src/main/res/layout/activity_slide3.xml
+++ b/app/src/main/res/layout/activity_slide3.xml
@@ -51,30 +51,37 @@
 
         <Button
             android:id="@+id/button1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="60dp"
+            android:textAlignment="textStart"
             android:text="Entrar"
+            android:drawableEnd="@drawable/seta"
+            android:drawablePadding="8dp"
             app:layout_constraintTop_toBottomOf="@id/contentLayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/button2"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="15dp"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_gravity="center_horizontal"
+            tools:ignore="RtlCompat"/>
 
-        <!-- Segundo botão -->
         <Button
             android:id="@+id/button2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="60dp"
+            android:textAlignment="textStart"
             android:text="Registar"
+            android:drawableEnd="@drawable/seta"
+            android:drawablePadding="8dp"
             app:layout_constraintTop_toBottomOf="@id/contentLayout"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/button1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/button2"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="50dp"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_gravity="center_horizontal"
+            tools:ignore="RtlCompat"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -102,9 +109,6 @@
                 android:src="@drawable/ball_black"
                 android:layout_margin="20dp"/>
         </LinearLayout>
-
-
-
 
     </LinearLayout>
 
