--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -131,8 +131,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="Salvar"
-        android:drawableEnd="@drawable/seta"
+        android:backgroundTint="@color/white"
+        android:textColor="@color/black"
+        android:textSize="50px"
+        android:text="Guardar Dados"
+        android:drawableEnd="@drawable/save"
         android:textAllCaps="false"
         app:layout_constraintTop_toBottomOf="@id/lastNameLine"
         app:layout_constraintStart_toStartOf="parent"
