--- a/app/src/main/res/layout/activity_slide3.xml
+++ b/app/src/main/res/layout/activity_slide3.xml
@@ -57,7 +57,6 @@
             android:text="Entrar"
             android:drawableEnd="@drawable/seta"
             android:drawablePadding="8dp"
-            app:layout_constraintTop_toBottomOf="@id/contentLayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/button2"
             android:layout_marginStart="16dp"
@@ -70,18 +69,18 @@
             android:id="@+id/button2"
             android:layout_width="200dp"
             android:layout_height="60dp"
-            android:textAlignment="textStart"
-            android:text="Registar"
-            android:drawableEnd="@drawable/seta"
-            android:drawablePadding="8dp"
-            app:layout_constraintTop_toBottomOf="@id/contentLayout"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/button2"
+            android:layout_gravity="center_horizontal"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="50dp"
-            android:layout_gravity="center_horizontal"
-            tools:ignore="RtlCompat"/>
+            android:background="@drawable/background_botton"
+            android:drawableEnd="@drawable/seta"
+            android:drawablePadding="8dp"
+            android:text="Registar"
+            android:textAlignment="textStart"
+            app:layout_constraintEnd_toStartOf="@id/button2"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="RtlCompat" />
 
         <LinearLayout
             android:layout_width="match_parent"
