--- a/app/src/main/res/layout/activity_home_page_user.xml
+++ b/app/src/main/res/layout/activity_home_page_user.xml
@@ -73,7 +73,7 @@
         android:layout_height="66dp"
         android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
-        app:srcCompat="@drawable/addChama"
+        app:srcCompat="@drawable/addchama"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="322dp" />
 
