--- a/app/src/main/res/drawable/button_background2.xml
+++ b/app/src/main/res/drawable/button_background2.xml
@@ -1,7 +1,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#D50000"/> <!-- Cor de fundo -->
+            <solid android:color="#D32F2F"/> <!-- Cor de fundo para o botão "Registar" -->
             <corners android:radius="30dp"/> <!-- Borda arredondada -->
         </shape>
     </item>
