--- a/app/src/main/res/layout/activity_notificacoes_user.xml
+++ b/app/src/main/res/layout/activity_notificacoes_user.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/notificacoes"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -30,11 +31,11 @@
             android:layout_alignParentEnd="true"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="22dp"
+            android:layout_marginBottom="8dp"
             android:background="@drawable/profile"
-            android:src="@drawable/profile"
-            android:scaleType="centerCrop"
             android:clipToOutline="true"
-            android:layout_marginBottom="8dp"/>
+            android:scaleType="centerCrop"
+            android:src="@drawable/profile" />
     </RelativeLayout>
 
     <!-- List of Items -->
@@ -42,9 +43,9 @@
         android:id="@+id/scroll_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_below="@id/header"
         android:layout_above="@id/bottom_navigation"
+        android:layout_below="@id/header"
+        android:layout_weight="1"
         android:padding="16dp">
         <!-- Conteúdo do ScrollView vai aqui -->
     </ScrollView>
@@ -56,37 +57,37 @@
         android:layout_height="92dp"
         android:layout_alignParentBottom="true"
         android:background="@color/white"
+        android:elevation="8dp"
         android:paddingTop="8dp"
-        android:paddingBottom="8dp"
-        android:elevation="8dp">
+        android:paddingBottom="8dp">
 
         <!-- Notification Icon -->
         <ImageView
             android:id="@+id/notification_icon"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_marginStart="16dp"
-            android:src="@drawable/ic_notification1"
             android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"/>
+            android:layout_centerVertical="true"
+            android:layout_marginStart="16dp"
+            android:src="@drawable/ic_notification1" />
 
         <!-- Fire Icon (Center) -->
         <ImageView
             android:id="@+id/fire_icon"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:src="@drawable/ic_fire1"
-            android:layout_centerInParent="true"/>
+            android:layout_centerInParent="true"
+            android:src="@drawable/ic_fire1" />
 
         <!-- Profile Icon -->
         <ImageView
             android:id="@+id/profile_icon"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_marginEnd="16dp"
-            android:src="@drawable/ic_profile"
             android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"/>
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/ic_profile" />
     </RelativeLayout>
 
 </RelativeLayout>
