--- a/app/src/main/res/layout/activity_slide3.xml
+++ b/app/src/main/res/layout/activity_slide3.xml
@@ -2,10 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -53,17 +51,16 @@
             android:id="@+id/button1"
             android:layout_width="200dp"
             android:layout_height="60dp"
-            android:textAlignment="textStart"
-            android:text="Entrar"
-            android:drawableEnd="@drawable/seta"
-            android:drawablePadding="8dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="15dp"
-            android:layout_gravity="center_horizontal"
-            android:background="@drawable/button_background"
+            android:drawableEnd="@drawable/seta"
+            android:drawablePadding="8dp"
+            android:text="Entrar"
+            android:textAlignment="textStart"
             android:textColor="@android:color/white"
-            tools:ignore="RtlCompat"/>
+            tools:ignore="RtlCompat" />
 
         <Button
             android:id="@+id/button2"
