--- a/app/src/main/res/layout/activity_esquecerpalavrapasse.xml
+++ b/app/src/main/res/layout/activity_esquecerpalavrapasse.xml
@@ -5,7 +5,7 @@
     android:id="@+id/forgotpass"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Register">
+    tools:context=".ForgotPassword">
 
     <!-- Container para a imagem de fundo e o logo -->
     <FrameLayout
@@ -41,9 +41,9 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="40dp"
-        android:text="Registar"
+        android:text="Esqueci-me da minha palavra-passe"
         android:textColor="@android:color/black"
-        android:textSize="24sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/frameLayout" />
@@ -73,64 +73,20 @@
         android:padding="12dp"
         app:layout_constraintEnd_toStartOf="@+id/parentEnd"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/email"
-        tools:ignore="SpeakableTextPresentCheck" />
+        app:layout_constraintTop_toBottomOf="@id/email" />
 
-    <TextView
-        android:id="@+id/password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="20dp"
-        android:text="Palavra-Passe"
-        android:textColor="#616161"
-        android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/emailEditText" />
-
-    <!-- Palavra-Passe -->
-    <EditText
-        android:id="@+id/passwordEditText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="25dp"
-        android:drawableEnd="@drawable/cadeado"
-        android:inputType="textPassword"
-        android:padding="12dp"
-        app:layout_constraintEnd_toStartOf="@+id/parentEnd"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/password" />
-
-    <!-- Botão Registar -->
+    <!-- Botão Enviar -->
     <Button
-        android:id="@+id/registerButton"
+        android:id="@+id/sendButton"
         android:layout_width="315dp"
         android:layout_height="72dp"
         android:layout_marginTop="30dp"
-        android:drawableEnd="@drawable/seta"
-        android:text="Registar"
-        android:textAllCaps="false"
-        android:textColor="@android:color/white"
-        app:layout_constraintEnd_toStartOf="@+id/parentEnd"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/passwordEditText" />
-
-    <!-- Botão Entrar -->
-    <Button
-        android:id="@+id/loginButton"
-        android:layout_width="315dp"
-        android:layout_height="72dp"
-        android:layout_marginTop="8dp"
-        android:drawableEnd="@drawable/seta"
-        android:text="Entrar"
+        android:text="Enviar"
         android:textAllCaps="false"
         android:textColor="@color/white"
         app:layout_constraintEnd_toStartOf="@+id/parentEnd"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/registerButton" />
-
+        app:layout_constraintTop_toBottomOf="@id/emailEditText" />
 
     <!-- Constraint para alinhar os elementos -->
     <View
