--- a/app/src/main/res/layout/activity_notificacoes_user.xml
+++ b/app/src/main/res/layout/activity_notificacoes_user.xml
@@ -2,8 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/notificacoes"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
     <!-- Header with gradient background -->
     <RelativeLayout
