--- a/app/src/main/res/layout/activity_adminusers_land.xml
+++ b/app/src/main/res/layout/activity_adminusers_land.xml
@@ -1,67 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
-    <!-- Navegação Inferior -->
-    <RelativeLayout
-
+    <!-- Header -->
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/header"
-        android:layout_width="match_parent"
-        android:layout_height="113dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="0dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/tab"
-        android:padding="16dp">
+        android:padding="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <!-- Ícone de Menu -->
         <ImageView
             android:id="@+id/menu_icon"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:layout_alignParentStart="true"
+            android:src="@drawable/setaback"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="40dp"
-            android:src="@drawable/setaback" />
+            android:layout_marginTop="20dp"/>
 
-        <!-- Foto do Perfil do User -->
+        <!-- Foto do Perfil do Usuário -->
         <ImageView
             android:id="@+id/profile_picture"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="22dp"
-            android:layout_marginBottom="8dp"
-            android:background="@drawable/profile"
-            android:clipToOutline="true"
+            android:src="@drawable/profile"
             android:scaleType="centerCrop"
-            android:src="@drawable/profile" />
-    </RelativeLayout>
+            android:clipToOutline="true"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="22dp"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <RelativeLayout
+    <!-- Navegação Inferior -->
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bottom_navigation"
-        android:layout_width="match_parent"
-        android:layout_height="92dp"
-        android:layout_alignParentBottom="true"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:background="@color/white"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
-        android:elevation="8dp">
+        android:elevation="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <!-- Ícone de Notificação -->
         <ImageView
             android:id="@+id/notification_icon"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_marginStart="16dp"
             android:src="@drawable/ic_notification"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="16dp"/>
 
         <!-- Ícone de Fogo (Centro) -->
         <ImageView
@@ -69,17 +72,21 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:src="@drawable/ic_fire"
-            android:layout_centerInParent="true"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <!-- Ícone de Perfil -->
         <ImageView
             android:id="@+id/profile_icon"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_marginEnd="16dp"
             android:src="@drawable/ic_profile"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"/>
-    </RelativeLayout>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginEnd="16dp"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
