--- a/app/src/main/res/layout/activity_home_page_user_land.xml
+++ b/app/src/main/res/layout/activity_home_page_user_land.xml
@@ -1,105 +1,121 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation_home"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <!-- Header with gradient background -->
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/header"
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/tab"
-        android:padding="16dp">
+        android:padding="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <!-- Menu Icon -->
         <ImageView
             android:id="@+id/menu_icon"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
             android:layout_marginStart="20dp"
             android:layout_marginTop="40dp"
-            android:src="@drawable/menu" />
+            android:src="@drawable/menu"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <!-- User Profile Picture -->
         <ImageView
             android:id="@+id/profile_picture"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="22dp"
             android:background="@drawable/profile"
             android:clipToOutline="true"
             android:scaleType="centerCrop"
-            android:src="@drawable/profile" />
+            android:src="@drawable/profile"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <!-- Greeting Message -->
         <TextView
             android:id="@+id/greeting_message"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:padding="16dp"
             android:text="Boas {First/Last Name},"
             android:textAlignment="center"
             android:textColor="@android:color/white"
-            android:textSize="24sp" />
-    </RelativeLayout>
+            android:textSize="24sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/menu_icon"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <!-- List of Items -->
     <ScrollView
         android:id="@+id/scroll_view"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_above="@id/bottom_navigation"
         android:layout_below="@id/header"
-        android:layout_weight="1"
+        app:layout_constraintTop_toBottomOf="@id/header"
+        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:padding="16dp">
+
         <!-- Conteúdo do ScrollView vai aqui -->
+
     </ScrollView>
 
     <!-- Bottom Navigation -->
     <RelativeLayout
         android:id="@+id/bottom_navigation"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="92dp"
         android:layout_alignParentBottom="true"
         android:background="@color/white"
         android:elevation="8dp"
         android:paddingTop="8dp"
-        android:paddingBottom="8dp">
+        android:paddingBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <!-- Notification Icon -->
         <ImageView
             android:id="@+id/notification_icon"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
             android:layout_marginStart="16dp"
-            android:src="@drawable/ic_notification" />
+            android:src="@drawable/ic_notification"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true" />
 
         <!-- Fire Icon (Center) -->
         <ImageView
             android:id="@+id/fire_icon"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_centerInParent="true"
-            android:src="@drawable/ic_fire" />
+            android:src="@drawable/ic_fire"
+            android:layout_centerInParent="true" />
 
         <!-- Profile Icon -->
         <ImageView
             android:id="@+id/profile_icon"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
             android:layout_marginEnd="16dp"
-            android:src="@drawable/ic_profile" />
+            android:src="@drawable/ic_profile"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true" />
     </RelativeLayout>
 
     <!-- Floating Action Button -->
@@ -111,5 +127,8 @@
         android:layout_alignParentEnd="true"
         android:layout_margin="16dp"
         android:layout_marginBottom="24dp"
-        android:src="@drawable/addchama" />
-</RelativeLayout>
+        android:src="@drawable/addchama"
+        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
