--- a/app/src/main/res/layout/activity_notificacoes_user.xml
+++ b/app/src/main/res/layout/activity_notificacoes_user.xml
@@ -42,10 +42,10 @@
         android:id="@+id/scroll_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_above="@id/bottom_navigation"
-        android:layout_below="@id/header"
-        android:layout_weight="1"
-        android:padding="16dp">
+        android:layout_above="@+id/bottom_navigation"
+        android:layout_below="@+id/header"
+        android:padding="16dp"
+        android:layout_marginBottom="8dp">
         <!-- Conteúdo do ScrollView vai aqui -->
     </ScrollView>
 
